# interpreter-to-binary-translation

./: .gitignore  CMakeLists.txt  README.md  main.c
docs/: _config.yml  chip-8.md  custom-isa.md  direct-threading-with-dynamic-precoding.md  direct-threading-with-static-precoding.md  direct-threading.md  fetch-decode-execute.md  index.html  index.md
docs/_includes/: custom-head.html  head_custom.html
include/: emulator.h
include/app/: emulator.h
include/mos6502/: cpu.h  exec.h  interpreter_engine.h  isa.h  opcodes.h  threaded_engine.h  trace.h  types.h
include/mos6502/engines/: block.h  linear.h  ops.h  threaded.h
include/x86_64/: emitter.h  isa.h
src/: emulator.c
src/app/: emulator.c
src/mos6502/: CMakeLists.txt  cpu.c  interpreter_engine.c  linear.c  opcodes.c
src/x86_64/emitter/: alu.c  flags.c  group.c  helpers.h  lea.c  mov.c
tools/: diff.py  generate_diagnosis.sh  generate_execution_diagnostics.py  py65_test.py
